--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,5 @@
       "email": "technique@beapi.fr"
     }
   ],
-  "type" : "wordpress-plugin",
-  "require" : {
-    "composer/installers" : "~0.1"
-  }
+  "type" : "wordpress-plugin"
 }
